--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,121 @@
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
 
+* {
+  font-family: 'PT Sans', sans-serif;
+}
+
+body {
+  background-color: white;
+  
+}
+
+.bg-green {
+  background-color: #008B8B;
+}
+#home {
+  background-color: #008B8B;
+  height: 43vh;
+}
+.navbar-nav li {
+  padding: 5px 10px;
+}
+
+.navbar-nav li a {
+  font-weight: bold;
+  color: #151819;
+}
+
+.navbar-nav li a:hover {
+ color: #fff!important;
+}
+.meogi {
+	padding-top: 20%;
+    padding-bottom: 10%;
+}
+.meogi h3 {
+	font-weight: bold;
+    color: #fff;
+    text-shadow: 4px 4px 5px rgb(0,0,0,.5);
+}
+.meogi h6 {
+    padding-top: 20px;
+    font-size: 20px;
+ }
+ .profile {
+ 	width: 50%;
+     height: 50%;
+     border-radius: 50%;
+     box-shadow: 4px 4px 3px rgb(0,0,0,0.2);
+}
+.name {
+	margin-top: 35px;
+    font-size: 20px;
+    text-shadow: 2px 3px 2px rgb(0,0,0,0.3);
+}
+.ngok {
+	text-transform: uppercase;
+    font-size: 13px;
+    font-weight: bold;
+}
+.ngik {
+	text-transform: uppercase;
+    font-size: 14px;
+    font-weight: bold;
+    color: black;
+}
+.sos {
+	border-bottom: 5px solid green;
+   display: inline-block;
+}
+.title {
+	border-bottom: 5px solid #008B8B;
+    display: inline-block;
+}
+.about {
+	margin-top: 10vh;
+    font-weight: bold;
+ }
+ #click {
+	background: #4a4343cb !important;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    bottom: 10%;
+    right: 10%;
+    border: 1px solid black;
+    position: fixed;
+    border-radius: 50%;
+   display: none;
+}
+.bt {
+  margin-right: 5%;
+}
+.bg-orange {
+  background: #d9a103!important;
+}
+.skills {
+	width: 100%;
+    max-width: 600px;
+    padding: 0 20px;
+}
+.skill-name {
+	font-size: 18px;
+    font-weight: 700;
+    color: black;
+    text-transform: uppercase;
+    margin: 20px 0;
+}
+footer {
+  left: 0;
+  width: 100%;
+  bottom: 0;
+  padding: 20px;
+  background-color: #008B8B;
+  font-family: Monospace;
+  font-weight: bold;
+}
+@media (min-width: 768px) {
+  footer {
+    position: fixed;
+  }
+ }
